--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 }
 
 .container-modal {
-  @apply relative px-6 md:px-10 lg:px-16 xl:px-24 max-w-[65rem] mx-auto;
+  @apply relative px-6 lg:px-0 xl:max-w-4xl max-w-3xl mx-auto;
 }
 
 .word-break {
